Files.writeString → Files.write() for jdk8u